--- a/Instruction/27-practice.html
+++ b/Instruction/27-practice.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style-27.css" />
   </head>
   <body>
-    <label for="chkMode">Mode</label>
+    <label for="chkMode" class="btn-mode">Mode</label>
     <input type="checkbox" id="chkMode" class="chk-mode">
 
     <div class="content">
