--- a/Starlink/index.html
+++ b/Starlink/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,23 +22,42 @@
     <title>Order Starlink</title>
   </head>
   <body>
-    <input type="checkbox" id="chkMenu" class="chkMenu">
+    <label for="chkMenu" class="side-menu-icon"><i class="fa-solid fa-bars"></i></label>
+    <input type="checkbox" id="chkMenu" class="chkMenu" />
     <nav class="side-menu">
       <label for="chkMenu"><i class="fa-solid fa-times"></i></label>
       <ul class="menu1">
         <li><a href="#">MAP</a></li>
         <li><a href="#">RESOURCES</a></li>
         <li><a href="#">SPECIFICATIONS</a></li>
-        <li><a href="#">US <i class="fa-solid fa-globe"></i></a></li>
+        <li>
+          <a href="#">US <i class="fa-solid fa-globe"></i></a>
+        </li>
         <li><a href="#">SIGN IN</a></li>
       </ul>
+
+      <ul class="menu2">
+        <li><a href="#">RESIDENTIAL</a></li>
+        <li><a href="#">BUSINESS</a></li>
+        <li><a href="#">ROAM</a></li>
+        <li><a href="#">MARITIME</a></li>
+        <li><a href="#">AVIATION</a></li>
+        <li><a href="#">IOT</a></li>
+      </ul>
+
+      <ul class="menu3">
+        <li><a href="#">TECHNOLOGY</a></li>
+        <li><a href="#">SUPPORT</a></li>
+      </ul>
     </nav>
+
     <section class="banner">
       <div class="navbar">
         <div class="logos">
           <img src="img/logo_x_white.png" class="logo-mobile" alt="Starlink" />
           <img src="img/logo_white.png" class="logo" alt="Starlink" />
         </div>
+
         <nav class="first-nav">
           <ul class="menu2">
             <li><a href="#">RESIDENTIAL</a></li>
@@ -48,15 +68,11 @@
             <li><a href="#">IOT</a></li>
           </ul>
         </nav>
+
         <nav class="second-nav">
-          <ul>
+          <ul class="menu3">
             <li><a href="#">TECHNOLOGY</a></li>
             <li><a href="#">SUPPORT</a></li>
-            <li>
-              <a href="#"
-                ><label for="chkMenu"><i class="fa-solid fa-bars"></i></label
-              ></a>
-            </li>
           </ul>
         </nav>
       </div>
@@ -70,16 +86,44 @@
           first-served basis.
         </p>
       </div>
+
       <div class="order-form">
         <form action="">
-          <input type="text" placeholder="SERVICE ADDRESS">
+          <input type="text" placeholder="SERVICE ADDRESS" />
           <button>ORDER NOW</button>
         </form>
         <div class="map"><a href="#">VIEW AVAILABILITY MAP &gt;</a></div>
-        <div class="privacy">By clicking order now, you agree to our <a href="#">Privacy Policy</a></div>
+        <div class="privacy">
+          By clicking order now, you agree to our <a href="#">Privacy Policy</a>
+        </div>
         <div class="scroll"><i class="fa-solid fa-chevron-down"></i></div>
       </div>
-
     </section>
+
+
+    <main>
+      <section>
+        <div>
+          <img src="img/Marketing_LandingStreaming_Redesign.webp" alt="">
+        </div>
+        <div>
+          <h2>STREAMING, VIDEO CALLS, ONLINE GAMING & MORE</h2>
+          <p>
+            With Starlink, users can engage in activities that historically have
+            not been possible with satellite internet.
+          </p>
+          <p>
+            Starlink`s high-speed, low-latency service is made possible via the
+            world`s largest constellation of highly advanced satellites
+            operating in a low orbit around the Earth.
+          </p>
+          <button>LEARN MORE</button>
+        </div>
+      </section>
+    </main>
+
+
+
+
   </body>
 </html>
