--- a/SASS/index.html
+++ b/SASS/index.html
@@ -44,7 +44,7 @@
                     <span>Mon</span>
                     <span>24&deg;C</span>
                 </li>
-                <li>
+                <li class="active">
                     <span><i class="fa-solid fa-cloud-sun"></i></span>
                     <span>Tue</span>
                     <span>22&deg;C</span>
@@ -56,7 +56,7 @@
                 </li>
             </ul>
 
-            <button><i class="fa-solid fa-location-dot"></i> Change Location</button>
+            <button class="btn-change"><i class="fa-solid fa-location-dot"></i> Change Location</button>
 
         </div>
     </section>
